--- a/app/src/main/res/layout/listview_all_item.xml
+++ b/app/src/main/res/layout/listview_all_item.xml
@@ -2,7 +2,8 @@
     android:id="@android:id/text1"
     style="?android:attr/spinnerItemStyle"
     android:singleLine="true"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
+    android:textAppearance="?android:attr/textAppearanceMedium"
     android:textAlignment="inherit"/>
