--- a/app/src/main/res/layout/listrow_details.xml
+++ b/app/src/main/res/layout/listrow_details.xml
@@ -12,17 +12,18 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_launcher"
+
         android:drawablePadding="5dp"
         android:gravity="center_vertical"
         android:text="test"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:textStyle="bold" >
     </TextView>
-
+    <!-- android:drawableLeft="@drawable/ic_launcher" -->
+    <!--
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/black" />
-
+      -->
 </LinearLayout>
