--- a/app/src/main/res/layout/all_view.xml
+++ b/app/src/main/res/layout/all_view.xml
@@ -13,8 +13,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.1">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="fill_parent"
